# intelligent-document-processing-agentic-analytics-platform

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_COMPLETE.md  README.md  build-optimized.ps1  build-optimized.sh  demo_agents.py  deploy-k8s.sh  deploy-swarm.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run_api.py  test_agents.py
ai_architect_demo/: __init__.py
ai_architect_demo/agents/: __init__.py  base_agent.py  business_intelligence.py  demo_agents.py  document_analyzer.py  integration_test.py  orchestrator.py  quality_assurance.py  usage_examples.py
ai_architect_demo/api/: __init__.py  auth.py  main.py
ai_architect_demo/api/routes/: __init__.py  agents.py  documents.py  models.py
ai_architect_demo/core/: __init__.py  config.py  config_manager.py  database.py  logging.py
ai_architect_demo/dashboard/: __init__.py  app.py
ai_architect_demo/data/: document_processor.py  validation.py
ai_architect_demo/ml/: __init__.py  evaluation.py  mlops.py
ai_architect_demo/streaming/: __init__.py  agent_integration.py  component_integration_test.py  demo_streaming.py  event_dispatcher.py  event_schemas.py  integration_test.py  kafka_client.py  kafka_connectivity_test.py  live_integration_test.py  real_time_monitor.py  simple_test.py  stream_processors.py
docker/api/: Dockerfile
docker/dashboard/: Dockerfile
docker/grafana/datasources/: datasources.yml
docker/mlflow/: start_server.sh
docker/ollama/: init.sh
docker/postgres/: init.sql
docker/worker/: Dockerfile
docs/: streaming_architecture.md
docs/adr/: 001-multi-agent-architecture.md  README.md
docs/api/: README.md  complete-reference.md
docs/deployment/: README.md  production-guide.md
docs/performance/: README.md
docs/security/: README.md
k8s/: ai-architecture.yaml  infrastructure.yaml  monitoring.yaml
scripts/: init_platform.py
terraform/: README.md
terraform/aws/: deploy.sh  ecs.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/azure/: containers.tf  deploy.sh  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  pytest.ini  test_runner.py
tests/e2e/: __init__.py  test_complete_workflows.py
tests/integration/: __init__.py  test_streaming_agents.py
tests/performance/: test_performance.py
tests/unit/: __init__.py  test_agents.py  test_event_schemas.py  test_simple_events.py
